fairway-sf/force-app/main/default/objects/Lead/fields/Interest_Type__c.field-meta.xml
<CustomField>
    <fullName>Interest_Type__c</fullName>
    <label>Interest Type</label>
    <type>Picklist</type>
    <description>What the lead expressed interest in from the website.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Founding Investor</fullName>
            </value>
            <value>
                <fullName>Future Member</fullName>
            </value>
            <value>
                <fullName>General Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>