fairway-sf/force-app/main/default/objects/Lead/fields/Investment_Interest__c.field-meta.xml
<CustomField>
    <fullName>Investment_Interest__c</fullName>
    <label>Investment Interest</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Investment amount the prospect expressed interest in from the website form.</description>
</CustomField>