fairway-sf/force-app/main/default/objects/Lead/fields/Investor_Tier__c.field-meta.xml
<CustomField>
    <fullName>Investor_Tier__c</fullName>
    <label>Investor Tier</label>
    <type>Picklist</type>
    <description>Investor tier based on investment amount. Bronze=$5K+, Silver=$15K+, Gold=$25K+, Platinum=$50K+.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Platinum</fullName><default>false</default><label>Platinum</label></value>
            <value><fullName>Gold</fullName><default>false</default><label>Gold</label></value>
            <value><fullName>Silver</fullName><default>false</default><label>Silver</label></value>
            <value><fullName>Bronze</fullName><default>false</default><label>Bronze</label></value>
            <value><fullName>Below Threshold</fullName><default>false</default><label>Below Threshold</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>