fairway-sf/force-app/main/default/objects/Lead/listViews/Fairway_Investor_Leads.listView-meta.xml
<ListView>
    <fullName>Fairway_Investor_Leads</fullName>
    <label>Fairway — Investor Leads</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Investment_Interest__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </filters>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>Investor_Tier__c</columns>
    <columns>Investment_Interest__c</columns>
    <columns>Interest_Type__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.CREATED_DATE</columns>
</ListView>